# Magic

./: .gitignore  README.md  get_scryfall.py  logger.conf  pyproject.toml  scryfall.py
marigold/: manage.py
marigold/marigold/: asgi.py  settings.py  urls.py  wsgi.py
proxy_analyzer/: __main__.py
