[tool.poetry]
name = "magic"
version = "0.1.0"
description = ""
authors = ["TRJackson998 <t.r.jackson998@gmail.com>"]
readme = "README.md"
packages = [
    { include = "proxy_analyzer" },
]

[tool.poetry.dependencies]
python = "^3.11"
pymysql = "^1.1.1"
sqlalchemy = "^2.0.37"
cryptography = "^44.0.0"
black = "^24.10.0"
pylint = "^3.3.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
